Fix issue with check table titles color in dark mode (#58)

--- a/web/src/styles/default.scss
+++ b/web/src/styles/default.scss
@@ -156,6 +156,10 @@ a,
   }
 }
 
+.table {
+  color: var(--color-font);
+}
+
 .table > :not(:first-child) {
   border-top-color: inherit;
 }
